--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google-cloud/vision": "^4.3.0",
     "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -21,7 +22,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.9.7"
+    "mysql2": "^3.9.7",
+    "tesseract.js": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^9.2.0",
