--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -2,8 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-deployment
+  namespace: my-namespace
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: backend
