--- a/backend-service.yaml
+++ b/backend-service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: my-namespace
 spec:
-  type: LoadBalancer
   selector:
     app: backend
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 5000
+  - protocol: TCP
+    port: 80
+    targetPort: 5000
+  type: LoadBalancer
