--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -1,20 +1,19 @@
-# Use the official Node.js image as a base
+# Use Node.js image
 FROM node:20
 
-# Set the working directory in the container
+# Set working directory
 WORKDIR /src
 
-# Copy package.json and package-lock.json
-COPY ../../package*.json ./
+# Copy package.json and package-lock.json from the root of the build context
+COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application code
+# Copy the rest of the source code into the image
 COPY . .
 
-# Expose the port the app runs on
+# Expose port and define the command to run the app
 EXPOSE 5000
 
-# Define the command to run the app
 CMD ["node", "src/index.js"]
