--- a/k8s/rabbitmq/rabbitmq-deployment.yaml
+++ b/k8s/rabbitmq/rabbitmq-deployment.yaml
@@ -4,6 +4,11 @@ metadata:
   name: rabbitmq
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   selector:
     matchLabels:
       app: rabbitmq
