--- a/k8s/backend/backend-deployment.yaml
+++ b/k8s/backend/backend-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-deployment
+  namespace: my-namespace
 spec:
   replicas: 1
   strategy:
@@ -21,7 +22,7 @@ spec:
       - name: backend
         image: azmatpathan/backend:latest
         ports:
-        - containerPort: 5000
+        - containerPort: 5000 # Ensure your backend listens on this port
         env:
         - name: DB_HOST
           value: "mysql"
