--- a/k8s/backend/backend-service.yaml
+++ b/k8s/backend/backend-service.yaml
@@ -2,9 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: my-namespace
 spec:
-  type: LoadBalancer
-  ports:
-  - port: 5000
   selector:
     app: backend
+  ports:
+  - protocol: TCP
+    port: 443          # Expose HTTPS port
+    targetPort: 5000   # The port your backend listens on
+  type: LoadBalancer
