--- a/k8s/mysql/mysql-deployment.yaml
+++ b/k8s/mysql/mysql-deployment.yaml
@@ -1,33 +1,33 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: mysql
-spec:
-  replicas: 1
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
-  selector:
-    matchLabels:
-      app: mysql
-  template:
-    metadata:
-      labels:
-        app: mysql
-    spec:
-      containers:
-      - name: mysql
-        image: gcr.io/capstone-430018/my-mysql:latest
-        ports:
-        - containerPort: 3306
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: "rootpassword"
-        - name: MYSQL_DATABASE
-          value: "mydatabase"
-        - name: MYSQL_USER
-          value: "myuser"
-        - name: MYSQL_PASSWORD
-          value: "mypassword"
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: mysql
+# spec:
+#   replicas: 1
+#   strategy:
+#     type: RollingUpdate
+#     rollingUpdate:
+#       maxUnavailable: 1
+#       maxSurge: 1
+#   selector:
+#     matchLabels:
+#       app: mysql
+#   template:
+#     metadata:
+#       labels:
+#         app: mysql
+#     spec:
+#       containers:
+#       - name: mysql
+#         image: gcr.io/capstone-430018/my-mysql:latest
+#         ports:
+#         - containerPort: 3306
+#         env:
+#         - name: DB_HOST
+#           value: "34.170.146.157" # External IP of Cloud SQL instance
+#         - name: DB_USER
+#           value: "user" # Cloud SQL username
+#         - name: DB_PASSWORD
+#           value: "password" # Cloud SQL password
+#         - name: DB_NAME
+#           value: "itms" # Your database name
