--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -1,8 +1,8 @@
-FROM mysql:8.0
+# FROM mysql:8.0
 
-ENV MYSQL_ROOT_PASSWORD=rootpassword
-ENV MYSQL_DATABASE=mydatabase
-ENV MYSQL_USER=myuser
-ENV MYSQL_PASSWORD=mypassword
+# ENV MYSQL_ROOT_PASSWORD=rootpassword
+# ENV MYSQL_DATABASE=mydatabase
+# ENV MYSQL_USER=myuser
+# ENV MYSQL_PASSWORD=mypassword
 
-EXPOSE 3306
+# EXPOSE 3306
