--- a/k8s/backend/backend-deployment.yaml
+++ b/k8s/backend/backend-deployment.yaml
@@ -24,11 +24,8 @@ spec:
         command:
         - "/cloud_sql_proxy"
         - "-dir=/cloudsql"
-        - "-instances=$(INSTANCE_CONNECTION_NAME)=tcp:3306"
+        - "-instances=capstone-430018:us-central1:telus-itms=tcp:3306"
         - "-credential_file=/secrets/service_account.json"
-        env:
-        - name: INSTANCE_CONNECTION_NAME
-          value: "capstone-430018:us-central1:telus-itms"
         volumeMounts:
         - name: cloudsql-instance-credentials
           mountPath: /cloudsql
@@ -41,15 +38,13 @@ spec:
         - containerPort: 5000
         env:
         - name: DB_HOST
-          value: "/cloudsql/$(INSTANCE_CONNECTION_NAME)"
+          value: "/cloudsql/capstone-430018:us-central1:telus-itms"
         - name: DB_USER
           value: "your-cloud-sql-user"
         - name: DB_PASSWORD
           value: "your-cloud-sql-password"
         - name: DB_NAME
           value: "itms"
-        - name: INSTANCE_CONNECTION_NAME
-          value: "capstone-430018:us-central1:telus-itms"
         volumeMounts:
         - name: cloudsql-instance-credentials
           mountPath: /cloudsql
