--- a/k8s/backend/backend-ingress.yaml
+++ b/k8s/backend/backend-ingress.yaml
@@ -7,13 +7,8 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
-  tls:
-  - hosts:
-    - telus-itms.com
-    secretName: backend-tls-secret
   rules:
-  - host: telus-itms.com
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
