--- a/k8s/backend/backend-ingress.yaml
+++ b/k8s/backend/backend-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: my-namespace
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Redirect HTTP to HTTPS
 spec:
   rules:
   - http:
@@ -16,4 +16,4 @@ spec:
           service:
             name: backend-service
             port:
-              number: 443
+              number: 80  # This should be 80 to match the service's port
